fix spacing issues logo on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+  padding-top: 0.25rem;
+  padding-left: 0.25rem;
 }
 
 /* Branding */
